# gAi

./: .gitignore  Cargo.toml  README.md  ovid.webm
src/: commit_prompt.txt  main.rs
